header-footer-flex

--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
   </head>
   <body>
     <!--шапка сайта-->
-    <header>
+    <header page-header>
       <div class="box container">
         <nav class="main-nav">
           <a href="./index.html" class="logo"
-            >Web<span class="logo-head">Studio</span></a
-          >
-
+            >Web<span class="logo-head">Studio</span>
+          </a>
           <ul class="site-nav list">
             <li class="item"><a href="#" class="link current">Студія</a></li>
             <li class="item">
@@ -167,26 +166,37 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="page-footer">
+        <div class="container box-footer">
       <a href="./index.html" class="logo"
         >Web<span class="logo-foot">Studio</span></a
       >
-      <address>
-        <ul class="list">
-          <li>
-            <a
-              href="https://goo.gl/maps/buH3xEs2t7yoEVax5"
-              class="link"
-              target="_blank"
-              rel="noopener nofollow"
-              ><span class="adress-link">м. Київ, пр-т Лесі Українки, 26</span>
-            </a>
-          </li>
-          <li>
-            <a href="mailto:info@example.com" class="link">info@example.com</a>
-          </li>
-          <li><a href="tel:+38099111111" class="link">+380991111111</a></li>
-        </ul>
+      <address footer-address>
+        
+          <ul class="footer-contacts-link list">
+            <li>
+              <a
+                href="https://goo.gl/maps/buH3xEs2t7yoEVax5"
+                class="footer-link link"
+                target="_blank"
+                rel="noopener nofollow"
+                ><span class="adress-link"
+                  >м. Київ, пр-т Лесі Українки, 26</span
+                >
+              </a>
+            </li>
+            <li>
+              <a href="mailto:info@example.com" class="footer-link link"
+                >info@example.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+38099111111" class="footer-link link"
+                >+380991111111</a
+              >
+            </li>
+          </ul>
+        </div>
       </address>
     </footer>
   </body>
