troubleshooting-img-emploeeyecard

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
       
           <h1 class="visually-hidden">selector</h1>
           <div class="button-selector">
-            <ul class="select-menu list ">
+            <ul class="select-menu">
           <li>
             <button type="button" class="select-button">Все</button>
           </li>
@@ -76,7 +76,7 @@
       </div>
         
 <div class="selct-visual">
-        <ul class="select-menu-img list">
+        <ul class="select-menu-img">
           <li class="img-list">
             <a href="#" class="select-link">
               <img
