--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a href="./index.html" class="logo"
             >Web<span class="logo-head">Studio</span>
           </a>
-          <ul class="site-nav list">
+          <ul class="site-nav">
             <li class="item"><a href="#" class="link current">Студія</a></li>
             <li class="item">
               <a href="./portfolio.html" class="link">Портфоліо</a>
@@ -36,7 +36,7 @@
           </ul>
         </nav>
         <div class="contacts">
-          <ul class="auth-nav list">
+          <ul class="auth-nav">
             <li class="item">
               <a href="mailto:info@devstudio.com" class="auth-nav-link"
                 >info@devstudio.com</a
@@ -63,7 +63,7 @@
       <section class="section-features">
         <div class="container">
           <h2 class="visually-hidden">Особливості</h2>
-          <ul class="features list">
+          <ul class="features">
             <li class="item">
               <h3 class="features-title">Увага до деталей</h3>
               <p class="features-text">
@@ -126,7 +126,7 @@
       <!-- наша команда  -->
       <section class="section-team">
         <div class="container">
-        <h2 class="team-title">Наша команда</h2>
+        <h2 class="main-team-title">Наша команда</h2>
         
         <ul class="employee list">
           <li class="item">
@@ -200,18 +200,19 @@
                 target="_blank"
                 rel="noopener nofollow"
                 ><span class="adress-link"
-                  >м. Київ, пр-т Лесі Українки, 26</span>
+                  >м. Київ, пр-т Лесі Українки, 26</span
+                >
               </a>
             </li>
             <li>
-              <a href="mailto:info@example.com" class="footer-link link"
-                >info@example.com
-              </a>
+              <a href="mailto:info@example.com" class="footer-link-mail link"
+                >info@example.com</a
+              >
             </li>
             <li>
-              <a href="tel:+38099111111" class="footer-link link"
-                >+380991111111
-              </a>
+              <a href="tel:+38099111111" class="footer-link-tel link"
+                >+380991111111</a
+              >
             </li>
           </ul>
         </div>
