--- a/portfolio.html
+++ b/portfolio.html
@@ -19,14 +19,14 @@
   </head>
 
   <body>
-    <header page-header>
+   <header page-header>
       <div class="box container">
         <nav class="main-nav">
           <a href="./index.html" class="logo"
             >Web<span class="logo-head">Studio</span>
           </a>
-          <ul class="site-nav list">
-            <li class="item"><a href="./index.html" class="link">Студія</a></li>
+          <ul class="site-nav">
+            <li class="item"><a href="./index.html" class="link ">Студія</a></li>
             <li class="item">
               <a href="./portfolio.html" class="link current">Портфоліо</a>
             </li>
@@ -36,7 +36,7 @@
           </ul>
         </nav>
         <div class="contacts">
-          <ul class="auth-nav list">
+          <ul class="auth-nav">
             <li class="item">
               <a href="mailto:info@devstudio.com" class="auth-nav-link"
                 >info@devstudio.com</a
@@ -206,7 +206,7 @@
 
     <footer class="page-footer">
         <div class="container box-footer">
-      <a href="./index.html" class="logo"
+      <a href="./index.html" class="logo-web-foot"
         >Web<span class="logo-foot">Studio</span></a
       >
       <address footer-address>
@@ -224,12 +224,12 @@
               </a>
             </li>
             <li>
-              <a href="mailto:info@example.com" class="footer-link link"
+              <a href="mailto:info@example.com" class="footer-link-mail link"
                 >info@example.com</a
               >
             </li>
             <li>
-              <a href="tel:+38099111111" class="footer-link link"
+              <a href="tel:+38099111111" class="footer-link-tel link"
                 >+380991111111</a
               >
             </li>
