logo-padding-footer

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     </main>
     <footer class="page-footer">
         <div class="container box-footer">
-      <a href="./index.html" class="logo"
+      <a href="./index.html" class="logo-web-foot"
         >Web<span class="logo-foot">Studio</span></a
       >
       <address footer-address>
