--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-   <header page-header>
+   <header class="page-header">
       <div class="box container">
         <nav class="main-nav">
           <a href="./index.html" class="logo"
