--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!--шапка сайта-->
-    <header page-header>
+    <header class="page-header">
       <div class="box container">
         <nav class="main-nav">
           <a href="./index.html" class="logo"
@@ -55,7 +55,7 @@
       <!--герой-->
 
       <section class="hero">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <h1 class="hero-title">Ефективні рішення для <br> вашого бізнесу</h1>
         <button type="button" class="hero-button">Замовити послугу</button>
       </section>
 
