--- a/index.html
+++ b/index.html
@@ -55,8 +55,11 @@
       <!--герой-->
 
       <section class="hero">
-        <h1 class="hero-title">Ефективні рішення для <br> вашого бізнесу</h1>
+        <div class="hero-text">
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="hero-button">Замовити послугу</button>
+        </div>
+
       </section>
 
       <!--вставка без заголовка-->
